# qahelper

./: .gitignore  LICENSE  README.md  pyproject.toml  test_main.py
src/qahelper/: __init__.py  __main__.py  cli.py  native_screenshot.py  portal_screenshot.py
